fix extra margin bug

--- a/assets/OtherProjects.css
+++ b/assets/OtherProjects.css
@@ -1,7 +1,3 @@
-.project-container {
-  margin-bottom: 13rem;
-}
-
 .other-projects-container {
   flex-direction: column;
   display: flex;
